# AI-Dev-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: ai-dev-team.mdc
.github/workflows/: ci.yml  docker.yml
app/agents/: architect.py  base.py  coder.py  planner.py  reviewer.py  tester.py  ui_designer.py
app/api/: main.py
app/core/: enums.py  exceptions.py  logging.py  request_context.py  settings.py
app/db/: models.py  session.py
app/graph/: edges.py  state.py  workflow.py
app/providers/: base.py  health.py  lmstudio.py  registry.py  stage_models.py
app/schemas/: _coerce.py  architecture.py  artifact.py  backup.py  code_change.py  diff.py  plan.py  playbook.py  project.py  provider.py  review.py  run.py  source_repo.py  task.py  test_result.py  ui_design.py  workspace.py
app/services/: artifact_service.py  backup_service.py  github_service.py  lesson_service.py  lmstudio_models_service.py  orchestration_service.py  playbook_service.py  project_service.py  provider_stage_runner.py  repository_service.py  run_service.py  (+4 more)
docs/: API.md  ARCHITECTURE.md  AUDIT_REPORT_20260514.md  DEPLOYMENT_SCALING.md  DEVELOPMENT.md  FULL_NEW_APP_BUILD_PLAN.md  INTEGRATION_DECISION.md  MASTER_BUILD_SPEC.md  OPERATIONAL_READINESS.md  RUNBOOK.md  SPEC_IMPLEMENTATION_MATRIX.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
prompts/: cursor_kickoff_prompt.txt
scripts/: dev_start.sh  docker-entrypoint.sh  run_checks.sh  seed_demo_data.py  server.sh
(+67 files in other folders)
